fix: Scrollbar CSS + LogOut + Produit

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,4 +9,5 @@ html, body {
 
 * {
   box-sizing: border-box;
+  scrollbar-width: none;
 }
